--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
 ###
 # Unity folders and files
 ###
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+Assets/AssetStoreTools*
 [Aa]ssets/AssetStoreTools*
 [Bb]uild/
 [Bb]uilds/
-Library
+Library/
 [Ll]ibrary/
 [Ll]ocal[Cc]ache/
 [Oo]bj/
