Added - Save and Exit feature
Save and Exit currently saves the characters position and facing
direction and reopens the game. Awaiting start menu to actually exit
game.

--- a/memes/Assembly-CSharp.csproj
+++ b/memes/Assembly-CSharp.csproj
@@ -81,7 +81,9 @@
      <Compile Include="Assets\Scripts\ItemScripts\Interactables.cs" />
      <Compile Include="Assets\Scripts\ItemScripts\Item.cs" />
      <Compile Include="Assets\Scripts\ItemScripts\ItemPickup.cs" />
+     <Compile Include="Assets\Scripts\NewPlayModeTest.cs" />
      <Compile Include="Assets\Scripts\PauseGame.cs" />
+     <Compile Include="Assets\Scripts\SaveGame.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
